# game-app

./: .gitignore  BUNDLE.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE.md  Makefile  README.md  TODO.md  appimage.sh  build.bat  build.sh  bundle.bat  bundle.sh  cmake_install.cmake  game-app  highscore.txt
.github/workflows/: cmake-multi-platform.yml
assets/: default.map.txt  mario.map.txt  stinger.map.txt  test.map.txt
src/: font.h  grid.hpp  highscore.h  laberinth.cpp  logo.h  main.cpp  maze.hpp  planets.cpp  stinger.cpp  tilemap.hpp
